--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,11 @@
 <h1>Rotten Tomatoes</h1>
-<%= link_to "Submit a movie!", new_moviepath %>
+<%= link_to "Submit a movie!", new_movie_path %> 
+<%#comment for erb %>
+<!--new_movie_path just add _path to any page and it links to it-->
+
+<!--this is an html comment -->
 <hr>
-<%= @movies.each do |movie| %>
+<%@movies.each do |movie| %>
 	<%= link_to image_tag(movie.poster_image_url), movie_path(movie) %>
 	<h2><%= link_to movie.title, movie_path(movie) %></h2>
 	<h3><%= movie.release_date %></h3>
