--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -5,3 +5,9 @@
     <h3><%= @movie.release_date %></h3>
     <h4>Dir. <%= @movie.director %> | <%= @movie.runtime_in_minutes %> minutes</h4>
     <p><%= @movie.description %></p>
+
+     <% @movie.reviews.each do |review| %>
+      <p><%= review.text %></p>
+      <p><%= review.rating_out_of_ten %>/10</p>
+      <small>- <%= review.user.full_name %></small><br/>
+    <% end %>
