--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for @movie do |f| %>
+<%= form_for @movie, :html => {:multipart => true} do |f| %>
       <% if @movie.errors.any? %>
         <div>
           <%= pluralize(@movie.errors.count, "error") %> prevented this movie from being submitted:
@@ -35,6 +35,8 @@
         <%= f.label :description %><br>
         <%= f.text_area :description %>
       </div>
+      </div>
+        <%= f.file_field :image %>
       <div>
         <%= f.submit "Submit" %> 
       </div>
